--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,4 +6,23 @@
   text-align: center;
 }
 
+.body{
+  background-image: url('/fondo.png');
+  background-color: aliceblue;
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
 
+.login-container{
+  width: 500px;
+  border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.5);
+  height: 300px;
+  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.5);
+}
