--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,16 +1,17 @@
 <div class="body">
   <div class="login-container">
     <h2>Login</h2>
-    <form>
+    <form [formGroup]="formLogin" (ngSubmit)="login()">
       <div class="form-group">
         <label for="username">Username</label>
-        <input type="text" id="username" name="username" class="form-control" />
+        <input type="text" id="username" name="username" class="form-control" formControlName="email" />
       </div>
       <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" id="password" name="password" class="form-control" />
+        <input type="password" id="password" name="password" class="form-control" formControlName="password" />
       </div>
       <button type="submit" class="btn btn-primary">Login</button>
     </form>
+    <span class="cursorPointer" (click)="redirectToRegister()">No tengo cuenta</span>
   </div>
 </div>
