--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,1 +1,17 @@
-<p>register works!</p>
+<div class="body">
+  <div class="login-container">
+    <h2>Login</h2>
+    <form [formGroup]="formRegister" (ngSubmit)="register()">
+      <div class="form-group">
+        <label for="username">Username</label>
+        <input type="text" id="username" name="username" class="form-control" formControlName="email" />
+      </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" id="password" name="password" class="form-control" formControlName="password" />
+      </div>
+      <button type="submit" class="btn btn-primary">Crear cuenta</button>
+    </form>
+    <span class="cursorPointer" (click)="redirectToLogin()">Ingresar</span>
+  </div>
+</div>
