--- a/src/app/projects/layout/layout.component.html
+++ b/src/app/projects/layout/layout.component.html
@@ -1,12 +1,12 @@
 <p-menubar>
   <ng-template pTemplate="start">
-    <img src="/logo.png" height="40" class="mr-2" class="cursorPointer" routerLink="/products">
+    <img src="/logo.png" height="40" class="mr-2" class="cursorPointer" routerLink="/projects">
   </ng-template>
   <ng-template pTemplate="end">
-      <p-button label="Cerrar sesion" icon="pi pi-power-off" iconPos="right"></p-button>
+      <p-button label="Cerrar sesion" icon="pi pi-power-off" iconPos="right" (onClick)="logout()"></p-button>
   </ng-template>
 </p-menubar>
 <router-outlet></router-outlet>
-<footer>
+<footer class="mt-5">
   <h4 class="text-center">Michael Alexis Vasquez Lopera</h4>
 </footer>
