--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
 <router-outlet></router-outlet>
+<ngx-spinner bdColor="rgba(0,0,0,0.6)" size="large" color="#1e334e" type="timer" [fullScreen]="true">
+  <p style="color: white"> Cargando, por favor espera unos momentos </p>
+</ngx-spinner>
