--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -23,6 +23,6 @@
   width: 500px;
   border-radius: 10px;
   background-color: rgba(0, 0, 0, 0.5);
-  height: 300px;
+  height: auto;
   box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.5);
 }
