--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,16 +1,18 @@
 <div class="body">
-  <div class="login-container">
+  <div class="login-container flex flex-column gap-3 p-5">
     <h2>Login</h2>
     <form [formGroup]="formLogin" (ngSubmit)="login()">
-      <div class="form-group">
-        <label for="username">Username</label>
-        <input type="text" id="username" name="username" class="form-control" formControlName="email" />
+      <div class="flex flex-column gap-2">
+        <label for="email" class="text-left">Email: </label>
+        <input type="text" pInputText id="email" name="email" aria-describedby="username-help"  formControlName="email" />
+        <small id="username-help" class="text-left text-red-300" *ngIf="isValidfield('email')"> {{ getFieldsErrors('email') }}</small>
       </div>
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password" class="form-control" formControlName="password" />
+      <div class="flex flex-column gap-2">
+        <label for="password" class="text-left mt-3">Contraseña: </label>
+        <input type="password" pInputText id="password" name="password" aria-describedby="username-help"  formControlName="password" />
+        <small id="username-help" class="text-left text-red-300" *ngIf="isValidfield('password')"> {{ getFieldsErrors('password') }}</small>
       </div>
-      <button type="submit" class="btn btn-primary">Login</button>
+      <button type="submit" class="btn btn-primary mt-3">Ingresar</button>
     </form>
     <span class="cursorPointer" (click)="redirectToRegister()">No tengo cuenta</span>
   </div>
