--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="body">
   <div class="login-container flex flex-column gap-3 p-5">
-    <h2>Login</h2>
+    <h2>Iniciar sesion</h2>
     <form [formGroup]="formLogin" (ngSubmit)="login()">
       <div class="flex flex-column gap-2">
         <label for="email" class="text-left">Email: </label>
