--- a/src/app/projects/pages/list-projects/list-projects.component.html
+++ b/src/app/projects/pages/list-projects/list-projects.component.html
@@ -9,9 +9,10 @@
         <tr>
           <th pSortableColumn="id" style="width:10%" class="text-center">ID <p-sortIcon field="id"></p-sortIcon></th>
           <th pSortableColumn="name" style="width:15%">Nombre <p-sortIcon field="name"></p-sortIcon></th>
-          <th pSortableColumn="email" style="width:30%">Correo <p-sortIcon field="email"></p-sortIcon></th>
+          <th pSortableColumn="email" style="width:20%">Correo <p-sortIcon field="email"></p-sortIcon></th>
           <th pSortableColumn="company.name" style="width:25%">Compañia <p-sortIcon field="company"></p-sortIcon></th>
           <th pSortableColumn="phone" style="width:20%">Telefono <p-sortIcon field="phone"></p-sortIcon></th>
+          <th style="width:10%"></th>
         </tr>
       </ng-template>
       <ng-template pTemplate="body" let-project>
@@ -21,8 +22,16 @@
           <td>{{project.email}}</td>
           <td>{{project.company.name}}</td>
           <td>{{project.phone}}</td>
+          <td><p-button (onClick)="showDialog(project.id)" label="Eliminar"/></td>
         </tr>
       </ng-template>
     </p-table>
   </div>
+    <p-dialog header="Desea eliminar proyecto" [modal]="true" [(visible)]="visible" [style]="{ width: '25rem' }">
+        <span class="p-text-secondary block mb-5">Esta seguro que desea eliminar este proyecto?</span>
+        <div class="flex justify-content-end gap-2">
+            <p-button label="Cancelar" severity="secondary" (onClick)="visible = false" />
+            <p-button label="Eliminar" severity="danger" (onClick)="deleteProject()" />
+        </div>
+    </p-dialog>
 </div>
